turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:21: error: type mismatch;
 found   : Array[Int]
 required: Int
	etat = rule(etat)(couleurActuelle)
                         ^